<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bookStored</string>
    <string name="hello_world">Hello world!</string>
    <string name="takePhoto">Take Photo</string>
    <string name="viewNotes">View Notes</string>
    <string name="editNotes">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_note_view">NoteView</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="title_activity_list_notes_view">ListNotesView</string>
    <string name="action_settings">Settings</string>
    <string name="titleHint">Title</string>
    <string name="authorName">Author Name</string>
    <string name="pageNum">Page Number</string>
    <string name="addNote">Additional Notes</string>
    <string name="defTag">textPageName</string>
    <string name="submitBtn">Submit</string>
	<string name="noteTitle">Note Title</string>
</resources>